# RfMultibot

./: Cargo.toml  Dockerfile  Readme.md  compose.yml
migrations/01-base/: up.sql
migrations/02-resend/: up.sql
src/: bsky_bot.rs  feed.rs  feed_parser.rs  filter.rs  main.rs  set.rs  storage.rs  tg_bot.rs
src/feed_parser/: feed_parser_test.rs
src/tests/: feed_parser_test.rs  filter_test.rs  mod.rs
