[package]
name = "RfeedMultibot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio_schedule = "0.3.2"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
bsky-sdk = "0.1.12"
reqwest = "0.12.9"
feed-rs = "2.1.1"
url = "2.5.3"
rusqlite = "0.32.1"
rusqlite_migration = "1.3.1"
